--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "graph-clustering",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
